Add Dockerfile for WebSocket server (server_a)

--- a/backend/server_a/Dockerfile
+++ b/backend/server_a/Dockerfile
@@ -14,3 +14,11 @@
 #COPY . .
 
 #CMD [??]
+
+FROM node:18
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+EXPOSE 3000 8080
+CMD ["node", "index.js"]
