Update Dockerfile for server_b

--- a/backend/server_b/Dockerfile
+++ b/backend/server_b/Dockerfile
@@ -1,9 +1,38 @@
-# This is where you define the image for
-# the server B which processes the orders.
+# # This is where you define the image for
+# # the server B which processes the orders.
 
-# You should then use Noje image from Docker Hub as the basis,
-# and then follow the instructions linked to in assignment document.
-# You should be able to produce a working installation by just
-# following the instructions.
+# # You should then use Noje image from Docker Hub as the basis,
+# # and then follow the instructions linked to in assignment document.
+# # You should be able to produce a working installation by just
+# # following the instructions.
 
-#FROM node:version...
+# # Use Node.js 18 as the base image
+# FROM node:18
+
+# # Create app directory
+# WORKDIR /usr/src/app
+
+# # Install app dependencies
+# # A wildcard is used to ensure both package.json AND package-lock.json are copied
+# COPY package*.json ./
+
+# # Install dependencies
+# RUN npm install
+
+# # Bundle app source
+# COPY . .
+
+# # Expose the port the app runs on
+# EXPOSE 3001
+
+# # Command to run the application
+# CMD [ "node", "index.js" ]
+
+
+# Dockerfile for Server B
+FROM node:18
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+CMD ["node", "index.js"]
